src/snapshots/syn_test__tests__all-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node1=node0.tee() 
	.map(| (hf_in) | { (hf_in) }) 
	.map(| (mut hf_in) | { let value = hf_in * 2 ; (value , ()) }) 
	.map(| (id , ()) | { (id) }) 
	.map(| (id) | { let value = id == 0 ; (value , (id)) });

node2=node1.tee() 
	.filter_map(| (cond , scope) | { if cond != false { return None } Some (scope) }) 
	.map(| (id) | { let value = check_exists (id) ; (value , ()) }) 
	.map(async | (future , scope) | { let value = future . await ; (value , scope) }) 
	.poll_futures();

node1.tee() 
	.filter_map(| (cond , scope) | { if cond != true { return None } Some (scope) }) 
	.map(| () | { let value = "You asked for 0?" . to_string () ; (value , ()) }) 
	.union(
		node2.tee() 
		.filter_map(| (cond , scope) | { if cond != true { return None } Some (scope) }) 
		.map(| () | { let value = format ! ("Found id: {hf_in}") ; (value , ()) })
	) 
	.map(| (message , ()) | { (message) }) 
	.map(| (message) | { let value = Some (message) ; (value , ()) }) 
	.map(| (value , _) | { value }) 
	.union(
		node2.tee() 
		.filter_map(| (cond , scope) | { if cond != false { return None } Some (scope) }) 
		.map(| () | { let value = None ; (value , ()) }) 
		.map(| (value , _) | { value })
	)
