src/snapshots/syn_test__tests__globals_simple-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node0.tee() 
	.map(| _ | { () }) 
	.map(| () | { let value = format ! ("hello") ; (value , ()) }) 
	.map(| (x , ()) | { (x) }) 
	.map(| (x) | { let value = Some (x) ; (value , ()) }) 
	.map(| (value , _) | { value })
