src/snapshots/syn_test__tests__globals_simple.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Map {
        f: | (x) | { let value = Some (x) ; (value , ()) },
        input: Map {
            f: | (x , ()) | { (x) },
            input: Map {
                f: | () | { let value = format ! ("hello") ; (value , ()) },
                input: Map {
                    f: | _ | { () },
                    input: Tee {
                        inner: RefCell {
                            value: Placeholder,
                        },
                    },
                },
            },
        },
    },
}
