src/snapshots/syn_test__tests__if_simple-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node1=node0.tee() 
	.MAP(| _ | { () }) 
	.MAP(| () | { let value = 1 == 2 ; (value , ()) });

UNION(
		node1.tee() 
			.FILTER_MAP(| (cond , scope) | { if cond != true { return None } Some (scope) }) 
			.MAP(| () | { let value = 3 ; (value , ()) })
	,
		node1.tee() 
			.FILTER_MAP(| (cond , scope) | { if cond != false { return None } Some (scope) }) 
			.MAP(| () | { let value = 4 ; (value , ()) })
	) 
	.MAP(| (value , _) | { value })
