src/snapshots/syn_test__tests__if_simple.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Union(
        Map {
            f: | () | { let value = 3 ; (value , ()) },
            input: Map {
                f: | (cond , scope) | { if cond != true { return None } Some (scope) },
                input: Tee {
                    inner: RefCell {
                        value: Map {
                            f: | () | { let value = 1 == 2 ; (value , ()) },
                            input: Tee {
                                inner: RefCell {
                                    value: Placeholder,
                                },
                            },
                        },
                    },
                },
            },
        },
        Map {
            f: | () | { let value = 4 ; (value , ()) },
            input: Map {
                f: | (cond , scope) | { if cond != false { return None } Some (scope) },
                input: Tee {
                    inner: RefCell {
                        value: Map {
                            f: | () | { let value = 1 == 2 ; (value , ()) },
                            input: Tee {
                                inner: RefCell {
                                    value: Placeholder,
                                },
                            },
                        },
                    },
                },
            },
        },
    ),
}
