src/snapshots/syn_test__tests__mut_simple.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Map {
        f: | (mut x) | { let value = x ; (value , ()) },
        input: Map {
            f: | (_ , (x)) | { (x) },
            input: Map {
                f: | (mut x) | { let value = x . push (5) ; (value , (x)) },
                input: Map {
                    f: | (_ , (x)) | { (x) },
                    input: Map {
                        f: | (mut x) | { let value = x . push (4) ; (value , (x)) },
                        input: Map {
                            f: | (x , ()) | { (x) },
                            input: Map {
                                f: | () | { let value = vec ! [1 , 2 , 3] ; (value , ()) },
                                input: Map {
                                    f: | _ | { () },
                                    input: Tee {
                                        inner: RefCell {
                                            value: Placeholder,
                                        },
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
    },
}
