src/snapshots/syn_test__tests__pipeline-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node0.tee() 
	.map(| (hf_in) | { (hf_in) }) 
	.map(| (hf_in) | { let value = 1 ; (value , (hf_in)) }) 
	.map(| (x , (hf_in)) | { (hf_in , x) }) 
	.map(| (hf_in , x) | { let value = hf_in + 2 ; (value , (x)) }) 
	.map(| (y , (x)) | { (x , y) }) 
	.map(| (x , y) | { let value = x + y + 3 ; (value , ()) }) 
	.map(| (z , ()) | { (z) }) 
	.map(| (z) | { let value = z + 4 ; (value , ()) }) 
	.map(| (o , ()) | { (o) }) 
	.map(| (o) | { let value = o + 5 ; (value , ()) }) 
	.map(| (value , _) | { value })
